--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+  <link rel="manifest" href="img/icons/manifest.json">
+  <meta name="msapplication-TileColor" content="#303952">
+  <meta name="msapplication-TileImage" content="img/icons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#303952">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ceviche+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Racing+Sans+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous"></script>
+  <title>Koma - Kraljevo inzamljivanje sony 4</title>
 </head>
 <body>
   <header class="header">
@@ -23,17 +42,17 @@
         <span class="heading-primary-main">KoMa KRALJEVO</span> 
         <span class="heading-primary-sub">Iznamljivanje sony konzola</span>
       </h1>
-      <span class="heading-primary-price">064/13-080-87 i 064/13-080-87</span>
-      <a href="" class="btn btn-white btn-animated">Kontaktirajte nas</a>
+      <span class="heading-primary-price">064/13-080-87 i 069/322-98-44</span>
+      <a href="#contact" class="btn btn-white btn-animated">Kontaktirajte nas</a>
     </div>
     
   </header>
 
-  <section class="price-heading">
+  <section class="price-heading" >
     <h2>Cenovnik</h2>
   </section>
 
-  <section class="price-box-section">
+  <section class="price-box-section" id="priceBox">
     <div class="price-box-container price-box-1">
       <div class="price-box-heading">Sony 4 na 24h</div>
       <div class="price-box-body">
@@ -52,7 +71,7 @@
         <div>2 igrice</div>
       </div>
       <div class="price-box-footer">
-        <div>2000 DIN</div>
+        <div>2400 DIN + 24H</div>
       </div>
     </div>
 
@@ -60,7 +79,7 @@
 
   
 
-  <section class="contact-section">
+  <section class="contact-section" id="contact">
     <div class="contact-heading">
         <h2>KONTAKT</h2>
     </div>
@@ -84,5 +103,6 @@
       </div>
     </div>
   </footer>
+  <script src="./js/app.js"></script>
 </body>
 </html>
